--- a/password_config.json
+++ b/password_config.json
@@ -26,8 +26,12 @@
       "smtp_port": 587,
       "email_address": "sapirshenhav@gmail.com",
       "email_password": "afwa nkoj lqms rhis"
-
-
+    },
+    "hotmail": {
+      "smtp_server": "smtp.live.com",
+      "smtp_port": 587,
+      "email_address": "sapirshenhav@hotmail.com",  
+      "email_password": "your-hotmail-app-password"  
     }
-}
+  }
 }
